sdk/go/auto/test/errors/compilation_error/typescript/index.ts
import * as pulumi from "@pulumi/pulumi";

will not compile
